# PacmanGymnasium

./: README.md  pyproject.toml  run_test.py
examples/: gym.ipynb  gym_basic.py  gym_basic_training.py
gym_pacman/: __init__.py
gym_pacman/envs/: layout.py  pacman_env.py
src/pacmangym/: __init__.py
